refactor: 기존 DTO클래스를 응답DTO와 요청DTO로 분리 및 추가